--- a/qutip/nonmarkov/bofin/.readthedocs.yml
+++ b/qutip/nonmarkov/bofin/.readthedocs.yml
@@ -15,7 +15,7 @@ sphinx:
 
 # Optionally build your docs in additional formats such as PDF
 formats:
-  - html
+  - pdf
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
