Print more information about the vm
Tests seems to pass or fail together.
Maybe there is a conflict with some VM configuration or cpus. So I am storing cpu, ram, and distribution info.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -94,6 +94,10 @@ jobs:
         run: |
           conda list
           python -c "import qutip; qutip.about()"
+          uname -r
+          hostnamectl
+          free -h
+          lscpu
 
       - name: Run tests
         # If our tests are running for longer than an hour, _something_ is wrong
