--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ requires = [
     "packaging",
     "wheel",
     "cython>=0.29.20",
+    # See https://numpy.org/doc/stable/user/depending_on_numpy.html for
+    # the recommended way to build against numpy's C API:
     "oldest-supported-numpy",
     "scipy>=1.0",
 ]
