--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,7 @@ jobs:
     env:
       # Set up wheels matrix.  This is CPython 3.6--3.9 for all OS targets.
       CIBW_BUILD: "cp3{6,7,8,9}-*"
+      CIBW_SKIP: "*-musllinux*"
       OVERRIDE_VERSION: ${{ github.event.inputs.override_version }}
 
     steps:
