initial commit - clean build for dev

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,74 @@
-cython>=0.29.20
-numpy>=1.16.6
-scipy>=1.0
-packaging
+alabaster==0.7.12
+asttokens==2.0.5
+attrs==21.4.0
+Babel==2.9.1
+backcall==0.2.0
+black==21.12b0
+build==0.7.0
+certifi==2020.6.20
+charset-normalizer==2.0.10
+click==8.0.3
+cycler==0.11.0
+Cython==0.29.26
+decorator==5.1.1
+docutils==0.16
+executing==0.8.2
+fonttools==4.28.5
+idna==3.3
+imagesize==1.3.0
+iniconfig==1.1.1
+ipython==8.0.0
+jedi==0.18.1
+Jinja2==3.0.3
+kiwisolver==1.3.2
+latexcodec==2.0.1
+MarkupSafe==2.0.1
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
+mypy-extensions==0.4.3
+numpy==1.22.0
+numpydoc==1.1.0
+packaging==21.3
+parso==0.8.3
+pathspec==0.9.0
+pep517==0.12.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.0
+platformdirs==2.4.1
+pluggy==1.0.0
+prompt-toolkit==3.0.24
+ptyprocess==0.7.0
+pure-eval==0.2.1
+py==1.11.0
+pybtex==0.24.0
+pybtex-docutils==1.0.1
+Pygments==2.11.2
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-rerunfailures==10.2
+python-dateutil==2.8.2
+pytz==2021.3
+PyYAML==6.0
+qutip @ file:///home/anna_user2/Dropbox/projects/sphinx-warnings/qutip/dist/qutip-4.7.0.dev0%2Bnogit-cp310-cp310-linux_x86_64.whl
+requests==2.27.1
+scipy==1.7.3
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==4.3.2
+sphinx-gallery==0.10.1
+sphinx-rtd-theme==1.0.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-bibtex==2.4.1
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+stack-data==0.1.3
+toml==0.10.2
+tomli==1.2.3
+traitlets==5.1.1
+typing_extensions==4.0.1
+urllib3==1.26.8
+wcwidth==0.2.5
