Only use numpy 1.22 in a single CI matrix item.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
         # matrix size; make sure to test all supported versions in some form.
         python-version: ["3.9"]
         case-name: [defaults]
-        numpy-requirement: ["==1.22"]
+        numpy-requirement: [">=1.20,<1.21"]
         # Extra special cases.  In these, the new variable defined should always
         # be a truth-y value (hence 'nomkl: 1' rather than 'mkl: 0'), because
         # the lack of a variable is _always_ false-y, and the defaults lack all
@@ -64,6 +64,13 @@ jobs:
             python-version: "3.8"
             nocython: 1
 
+          # Python 3.10 and numpy 1.22
+          # Use conda-forge to provide numpy 1.22
+          - case-name: Python 3.10
+            os: ubuntu-latest
+            python-version: "3.10"
+            condaforge: 1
+
     steps:
       - uses: actions/checkout@v2
 
@@ -71,11 +78,6 @@ jobs:
         with:
           auto-update-conda: true
           python-version: ${{ matrix.python-version }}
-
-      - name: Add conda-forge
-        run: |
-          conda config --prepend channels conda-forge
-          conda config --set channel_priority strict
 
       - name: Install QuTiP and dependencies
         # In the run, first we handle any special cases.  We do this in bash
@@ -87,6 +89,10 @@ jobs:
             QUTIP_TARGET="$QUTIP_TARGET,runtime_compilation"
           fi
           export CI_QUTIP_WITH_OPENMP=${{ matrix.openmp }}
+          if [[ -n "${{ matrix.condaforge }}" ]]; then
+            conda config --prepend channels conda-forge
+            conda config --set channel_priority strict
+          fi
           if [[ -z "${{ matrix.nomkl }}" ]]; then
             conda install blas=*=mkl "numpy${{ matrix.numpy-requirement }}" "scipy${{ matrix.scipy-requirement }}"
           elif [[ "${{ matrix.os }}" =~ ^windows.*$ ]]; then
