Change deprecated license_file to license_files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown; variant=GFM
 keywords = quantum, physics, dynamics
 license = BSD 3-Clause License
-license_file = LICENSE.txt
+license_files = LICENSE.txt
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Science/Research
