--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -106,6 +106,7 @@ jobs:
           else
             conda install nomkl "numpy${{ matrix.numpy-requirement }}" "scipy${{ matrix.scipy-requirement }}"
           fi
+          python -m pip install packaging
           python -m pip install --no-build-isolation -e .[$QUTIP_TARGET]
           python -m pip install pytest-cov coveralls
 
