Small setup.cfg changes from master to support Python 3.10.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,16 @@
 [metadata]
 name = qutip
-url = http://qutip.org
+url = https://qutip.org
 description = QuTiP: The Quantum Toolbox in Python
 long_description = file: README.md
 long_description_content_type = text/markdown; variant=GFM
 keywords = quantum, physics, dynamics
 license = BSD 3-Clause License
-license_file = LICENSE.txt
+license_files = LICENSE.txt
+project_urls =
+    Bug Tracker = https://github.com/qutip/qutip/issues
+    Documentation = https://qutip.org/docs/latest/
+    Source Code = https://github.com/qutip/qutip
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Science/Research
@@ -18,7 +22,7 @@ classifiers =
     Operating System :: POSIX
     Operating System :: Unix
     Operating System :: Microsoft :: Windows
-author = Alexander Pitchford, Paul D. Nation, Robert J. Johansson, Chris Granade, Arne Grimsmo, Nathan Shammah, Shahnawaz Ahmed, Neill Lambert, Eric Giguere, Boxi Li, Jake Lishman
+author = Alexander Pitchford, Paul D. Nation, Robert J. Johansson, Chris Granade, Arne Grimsmo, Nathan Shammah, Shahnawaz Ahmed, Neill Lambert, Eric Giguere, Boxi Li, Jake Lishman, Simon Cross
 author_email = qutip-admin@googlegroups.com
 platforms = Linux, Mac OSX, Unix, Windows
 
@@ -29,10 +33,12 @@ zip_safe = False
 install_requires =
     numpy>=1.16.6
     scipy>=1.0
+    packaging
 setup_requires =
-    numpy>=1.16.6,<1.20
+    numpy>=1.13.3
     scipy>=1.0
     cython>=0.29.20
+    packaging
 
 [options.packages.find]
 include = qutip*
