--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -77,6 +77,12 @@ jobs:
             condaforge: 1
             pytest-extra-options: "-W ignore::ImportWarning -W ignore::DeprecationWarning:cvxpy.interface.scipy_wrapper"
 
+          # Windows. Once all tests pass without special options needed, this
+          # can be moved to the main os list in the test matrix.
+          - case-name: Windows Latest
+            os: windows-latest
+            pytest-extra-options: "-k 'not (test_correlation or test_interpolate or test_dnorm)'"
+
     steps:
       - uses: actions/checkout@v2
 
