Test report install settings

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -116,6 +116,7 @@ jobs:
         run: |
           conda list
           python -c "import qutip; qutip.about()"
+          python -c "import qutip; print(qutip.settings.install)"
 
       - name: Environment information
         run: |
