--- a/.github/workflows/build_documentation.yml
+++ b/.github/workflows/build_documentation.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Install documentation dependencies
         run: |
           python -mpip install -r doc/requirements.txt
+          sudo apt-get update
           sudo apt-get install texlive-full
 
       - name: Install QuTiP from GitHub
