Build documentation with latest pip version

--- a/.github/workflows/build_documentation.yml
+++ b/.github/workflows/build_documentation.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install documentation dependencies
         run: |
+          pip install pip --upgrade
           python -mpip install -r doc/requirements.txt
 
       - name: Install QuTiP from GitHub
