Upgrade pip (pip 22.1 broke support for oldest-supported-numpy when using --no-build-isolation by complaining that oldest-supported-numpy was not installed but later versions of pip fixed this check).

--- a/.github/workflows/build_documentation.yml
+++ b/.github/workflows/build_documentation.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install documentation dependencies
         run: |
+          pip install pip --upgrade
           python -mpip install -r doc/requirements.txt
           sudo apt-get update
           sudo apt-get install texlive-full
