Added ipython to testing workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -121,6 +121,7 @@ jobs:
           python -m pip install -e .[$QUTIP_TARGET]
           python -m pip install coverage==6.2
           python -m pip install pytest-cov coveralls pytest-fail-slow
+          python -m pip install ipython
 
       - name: Package information
         run: |
