--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -126,7 +126,7 @@ jobs:
         run: |
           conda list
           python -c "import qutip; qutip.about()"
-          python -c "import qutip; print(qutip.settings.install)"
+          python -c "import qutip; print(qutip.settings)"
 
       - name: Environment information
         run: |
