--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -181,6 +181,16 @@ jobs:
           COVERALLS_PARALLEL: true
         run: coveralls --service=github
 
+  verify-change-doc-added: 
+    name: Verify Towncrier entry added
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verify Towncrier entry added
+        run: |
+          CHANGES=$(git diff --name-only doc/changes | grep [0-9]\\+ -o)
+          PR_NUMBER=${{ github.event.number }}
+          if [[ -n "$CHANGES[$PR_NUMBER]" ]]; then exit 0; else exit 1; fi
+
   finalise:
     name: Finalise coverage reporting
     needs: cases
