--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ manylinux-i686-image = "manylinux2010"
 package = "qutip"
 package_dir = "qutip"
 directory = "doc/changes"
+filename = "doc/changelog.rst"
 [[tool.towncrier.type]]
 directory = "deprecation"
 name = "Deprecations"
