add towncrier change types

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,23 @@ filename = "doc/changelog.rst"
 directory = "deprecation"
 name = "Deprecations"
 showcontent = true
+[[tool.towncrier.type]]
+directory = "features"
+name = "Features"
+showcontent = true
+[[tool.towncrier.type]]
+directory = "bugfixe"
+name = "Bug Fixes"
+showcontent = true
+[[tool.towncrier.type]]
+directory = "removal"
+name = "Removals"
+showcontent = true
+[[tool.towncrier.type]]
+directory = "doc"
+name = "Documentation"
+showcontent = true
+[[tool.towncrier.type]]
+directory = "misc"
+name = "Miscellaneous"
+showcontent = true
