Changed ipython depency to be in setup instead of workflow.

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,8 @@ semidefinite =
 tests =
     pytest>=5.2
     pytest-rerunfailures
+ipython =
+    ipython
 ; This uses ConfigParser's string interpolation to include all the above
 ; dependencies into one single target, convenient for testing full builds.
 full =
@@ -59,3 +61,4 @@ full =
     %(runtime_compilation)s
     %(semidefinite)s
     %(tests)s
+    %(ipython)s
