add compare-to-master to towncrier check action
Co-authored-by: Simon Cross <hodgestar+github@gmail.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -188,7 +188,7 @@ jobs:
       - name: Verify Towncrier entry added
         run: |
           python -m pip install towncrier
-          towncrier check
+          towncrier check --compare-with master
 
   finalise:
     name: Finalise coverage reporting
