--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,11 @@ directory = "deprecation"
 name = "Deprecations"
 showcontent = true
 [[tool.towncrier.type]]
-directory = "features"
+directory = "feature"
 name = "Features"
 showcontent = true
 [[tool.towncrier.type]]
-directory = "bugfixe"
+directory = "bugfix"
 name = "Bug Fixes"
 showcontent = true
 [[tool.towncrier.type]]
