--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,9 +37,9 @@ jobs:
           # numpy 1.20
           - case-name: old SciPy
             os: ubuntu-latest
-            python-version: "3.8"
-            scipy-requirement: ">=1.5,<1.6"
-            numpy-requirement: ">=1.20,<1.21"
+            python-version: "3.9"
+            scipy-requirement: ">=1.4,<1.5"
+            numpy-requirement: ">=1.20"
 
           # No MKL runs.  MKL is now the default for conda installations, but
           # not necessarily for pip.
