--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,12 +33,13 @@ jobs:
         # the lack of a variable is _always_ false-y, and the defaults lack all
         # the special cases.
         include:
-          # Scipy 1.5, we let conda choose numpy and python versions
+          # Scipy 1.5
           - case-name: old SciPy
             os: ubuntu-latest
-            python-version: ">=3.8"
+            python-version: "3.8"
             numpy-requirement: ">=1.20"
             scipy-requirement: ">=1.5,<1.6"
+            condaforge: 1
 
           # No MKL runs.  MKL is now the default for conda installations, but
           # not necessarily for pip.
