--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
           - case-name: old SciPy
             os: ubuntu-latest
             python-version: "3.8"
-            numpy-requirement: ">=1.20"
+            numpy-requirement: ">=1.20,<1.21"
             scipy-requirement: ">=1.5,<1.6"
             condaforge: 1
 
